Modified to add type checking, support for floats Type checking - expression types are inferred, no type promotion (int -> float)
git-svn-id: https://lapis.rasip.fer.hr/svn/remes@3421 4ebb4fe7-ff5e-4d1a-9baf-b639f71a6d04